<resources>
    <string name="firebase_key">5807486351-5sridj0u3q0pljuv7qrvm888ildbhuin.apps.googleusercontent.com</string>
    <string name="app_name">Cybertech</string>
    <string name="Choose">Scelta Sezione</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="HomePage_return">Torna alla Homepage</string>
    <string name="manifest_posotivity">Segnala Positività </string>
    <string name="manifest_negativity">Segnala Guarigione </string>
    <string name="settings">Impostazioni</string>
    <string name="todo">TODO</string>
    <string name="Sezione_covid">Sezione Covid 19</string>
    <string name="covid_section">Segnalazione Positività Covid 19</string>
    <string name="title_activity_settings_covid">SettingsCovidActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="groupName">Nome gruppo:</string>
    <string name="button">Button</string>
    <string name="textview">TextView</string>
    <string name="name_dotted">Nome:</string>
    <string name="surname_dotted">Cognome:</string>
    <string name="date_alert">Segnalazione:</string>
    <string name="state_alert">Stato segnalazione:</string>
    <string name="nulls">Null</string>
    <string name="no_sign">Nessuna segnalazione effettuata</string>
    <string name="reports_received">Segnalazioni ricevute</string>
    <string name="last_sign">Ultima segnalazione effettuata:</string>
    <string name="no_sign2">Non hai effettuato nessuna segnalazione</string>
    <string name="no_sign_received">Nessuna Segnalazione ricevuta</string>
    <string name="ultime_sign">Segnalazioni di positività ricevute:</string>
    <string name="effettua_sign">Effettua una segnalazione</string>
    <string name="name">Nome</string>
    <string name="surname">Cognome</string>
    <string name="date">Data del contagio</string>
    <string name="send_sign">Invia segnalazione</string>
    <string name="anonymous">Segnalazione anonima?</string>
    <string name="date_tampone">Data del tampone:</string>
    <string name="state_cont">Stato contagio:</string>
    <string name="state">stato</string>
    <string name="data">data</string>
    <string name="stato">stato</string>
    <string name="menu_homepage">Home page</string>
    <string name="menu_covid">Gestione COVID-19</string>
    <string name="menu_quarantine_assistance">Assistenza</string>
    <string name="menu_showcase">Prestiti</string>
    <string name="nuova_richiesta">Nuova Richiesta</string>
    <string name="prese_in_carico">Prese in carico</string>
    <string name="le_mie_richieste">Le mie richieste</string>
    <string name="mio_profilo">Mio Profilo</string>
    <string name="title">Titolo</string>
    <string name="description">Descrizione</string>
    <string name="rent_expire">Data consegna</string>
    <string name="load_image">Carica immagine</string>
    <string name="showcase_expire_date">Data di restituzione:</string>
    <string name="rent_disclosure_description">Accettando di prendere in prestito il materiale, dichiari di essere responsabile del prestito e di qualsiasi danno accidentale o non venga arrecato al materiale. Al termine del prestito un questionario di feedback verrà sottoposto al proprietario per verificare la cura prestata.\nSe il proprietario dovesse notare delle anomalie gravi, il tuo profilo potrebbe essere segnato come \'inaffidabile\' e non potrai più richiedere alcun prestito finchè non rimedierai ai danni</string>
    <string name="rent_disclosure">Assunzione responsabilità</string>
    <string name="manifestNegButton">Segnala Guarigione</string>
    <string name="rent_feedback_negative_message">Ci dispiace che il prestito non sia andato a buon fine e l\'utente sia stato irrispettoso. Con il tuo feedback all\'utente verrà assegnata una mora che potrebbe impedirgli di ottenere nuovi prestiti, perciò sii onesto</string>
    <string name="rent_feedback_positive_message">Grazie per il feedback</string>
    <string name="rent_feedback_positive">Tutto a buon fine</string>
    <string name="rent_feedback_negative">Feedback negativo</string>
    <string name="field_required">Campo obbligatorio</string>
    <string name="password_mismatch">Le password devono corrispondere</string>
    <string name="login">Accedi</string>
    <string name="not_registered">Non sei registrato? Registrati</string>
    <string name="google">Google</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_welcome">Benvenuto in families share plugin</string>
    <string name="other_provider">oppure, autenticati con un provider</string>
    <string name="signin_description">Benvenuto in families share plugin\nCompila i seguenti campi per registrarti</string>
    <string name="confirm_password">Conferma password</string>
    <string name="position_required">Richiesta posizione</string>
    <string name="position_required_description">L\'app utilizza la posizione per mostrarti i gruppi e le informazioni della tua zona. Senza questi dati l\'app non può funzionare</string>
    <string name="groups">Gruppi</string>
    <string name="partecipant_dotted">Partecipanti:</string>
    <string name="add_to_showcase">Aggiungi materiale in prestito</string>
    <string name="profile">Profilo</string>
    <string name="create_group">Crea gruppo</string>
    <string name="create_group_title">Qui potrai creare un nuovo gruppo nella tua zona</string>
    <string name="create_group_warning_description">Creando un nuovo gruppo ti assicuri che non ne esista già uno della stessa tipologia nella tua zona e accetti la responsabilità di diventare l\'amministratore e di adottare un comportamento adeguato alle linee della community</string>
    <string name="information">Informazioni</string>
    <string name="activity">Attività</string>
    <string name="default_notification_channel_id" translatable="false">base</string>
    <string name="profile_infopersonali">Info personali</string>
    <string name="profile_infourbane">Localizzazione</string>
    <string name="profile_credenziali">Credenziali</string>
    <string name="EditPassword">Cambio password</string>
    <string name="EditEmail">Cambio e-mail</string>
    <string name="oldPassword">Vecchia password</string>
    <string name="newPassword">Nuova password</string>
    <string name="confirmNewPassword">Conferma nuova password</string>
    <string name="oldEmail">Vecchia e-mail</string>
    <string name="newEmail">Nuova e-mail</string>
    <string name="confirmNewEmail">Conferma nuova e-mail</string>
    <string name="requiredField">Campo obbligatorio</string>
    <string name="email_updated">Email modificata con successo!</string>
    <string name="email_mismatch">Gli indirizzi email devono corrispondere</string>
    <string name="editpwd">Cambio password</string>
    <string name="malformedEmail">Formato e-mail errato!</string>
    <string name="WrongFormatEmail">Formato e-mail errato!</string>
    <string name="existingUser">L\'indirizzo e-mail è già utilizzato!</string>
    <string name="InvalidUser">Utilizza un altro indirizzo e-mail!</string>
    <string name="genericError">Errore!</string>
    <string name="Hidden">********</string>
    <string name="profile_account">Account</string>
    <string name="DescriptionEmailEdit">Puoi inserire una qualsiasi e-mail (di tua proprietà) che non corrisponda ad un altro account Families Share.</string>
    <string name="DescriptionPwdEdit"><![CDATA[La nuova password deve contenere almeno 8 caratteri, preferibilmente con almeno una lettera maiuscola (es. A), una lettera minuscola (es. a), un simbolo (es. &) e un numero (es. 1).]]></string>
    <string name="editPwd">Quì puoi cambiare la tua password!</string>
    <string name="TitleEmailEdit">Quì puoi aggiornare la tua e-mail!</string>
    <string name="Rilogin">NOTA: dovrai rieseguire l\'accesso dopo la modifica delle credenziali.</string>
    <string name="pwdUpdated">La password è stata modificata con successo!</string>
    <string name="WeakPwd">La password non rispetta i criteri minimi di sicurezza!</string>
    <string name="same_password">Scegli un\'altra password!</string>
    <string name="insertPwd">Inserisci la tua password</string>
    <string name="authNecessary">Autenticazione necessaria</string>
    <string name="Ok">Ok</string>
    <string name="Cancel">Annulla</string>
    <string name="googleProvider">google.com</string>
    <string name="googleProviderAlert">Non puoi modificare la password Google!</string>
    <string name="positionPrivilegeNeeded">Accesso alla posizione necessario!</string>
    <string name="localizationUpdated">La localizzazione è stata aggiornata!</string>
    <string name="unreliable_description">Ci dispiace, ma sembra che tu non sia stato responsabile durante i precedenti prestiti per questo motivo non potrai più effettuarne fino a quando non avrai ripagato i danni recati</string>
    <string name="unreliable">Inaffidabile</string>
    <string name="showcase">Vetrina</string>
    <string name="rented_materials">Materiali in prestito</string>
    <string name="rent_materials">Materiali messi in prestito</string>
    <string name="dateOfBirth">Data di nascita</string>
    <string name="FailedSignup">Registrazione fallita</string>
    <string name="SaferPwd">Usa una password più sicura</string>
    <string name="wrongEmailFormat">Formato indirizzo email non valido</string>
    <string name="ExistingUser">Utente già registrato</string>
    <string name="LocalizationError">Errore di localizzazione</string>
    <string name="GroupCreationDone">Hai creato un nuovo gruppo!</string>
    <string name="ActivityCreation">Creazione attività</string>
    <string name="Date">Data</string>
    <string name="place">Luogo</string>
    <string name="activityCreated">Attività creata con successo!</string>
    <string name="expired">Scadute</string>
    <string name="request_accepted">Richiesta accettata</string>
    <string name="request_rejected">Richiesta respinta</string>
    <string name="feedback">Feedback</string>
    <string name="showcase_until_dotted">In vetrina fino al:</string>
    <string name="groupDescription">Descrizione</string>
    <string name="nMembers">Partecipanti: </string>
    <string name="addnewgroupactivity">Aggiunge una nuova attività al gruppo</string>
    <string name="groupActivityName">Nome attività</string>
    <string name="groupActivityDescription">Descrizione</string>
    <string name="Location">Luogo</string>
    <string name="OnlyGroupMembersForActivityJoin">Solo i membri del gruppo possono partecipare alle attività!</string>
    <string name="GroupActivitySubscribed">Ti sei iscritto all\'attività!</string>
    <string name="GroupActivityRemoved">Hai annullato la tua iscrizione!</string>
    <string name="LeftGroup">Hai lasciato il gruppo!</string>
    <string name="NowMember">Ora sei un membro del gruppo!</string>
    <string name="groupActivityImgDescription">Image of current activity</string>
    <string name="something_wrong">Qualcosa è andato storto</string>
    <string name="error">Errore</string>
    <string name="material_error">Non è stato possibile aggiungere il tuo materiale in prestito. Riprova tra qualche istante</string>
    <string name="done_exclamation">Fatto!</string>
    <string name="material_published_to_showcase">Il tuo annuncio è stato pubblicato</string>
    <string name="deadlines">Scadenze</string>
    <string name="request_sended">Richiesta inviata con successo</string>
</resources>