<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/radius_cards"
        android:backgroundTint="@color/viola_mask"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/textView_nameGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="17dp"
            android:layout_marginTop="15dp"
            android:text="@string/groupName"
            android:textColor="#E1BEE7" />

        <TextView
            android:id="@+id/textView_stateTamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_nameGroup"
            android:layout_alignStart="@+id/textView_nameGroup"
            android:layout_marginStart="0dp"
            android:layout_marginTop="21dp"
            android:text="@string/state_cont"
            android:textColor="#E1BEE7"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textView_changeDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView_nameGroup"
            android:layout_marginStart="11dp"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@+id/textView_nameGroup"
            android:text="@string/data"
            android:textColor="#E1BEE7"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textView_changeStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView_stateTamp"
            android:layout_marginStart="11dp"
            android:layout_marginTop="1dp"
            android:layout_toEndOf="@+id/textView_stateTamp"
            android:text="@string/stato"
            android:textColor="#E1BEE7"
            android:visibility="visible" />
    </RelativeLayout>
</RelativeLayout>