<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gestione_covid.ManifestNegativityFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/view_manifestNegativity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/GhostWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textView_UltimaSegnalazione"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="88dp"
            android:text="@string/last_sign"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/imageView_noSign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:scaleType="center"
            android:src="@drawable/immagine2"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/view_manifestNegativity"
            app:layout_constraintEnd_toEndOf="@+id/view_manifestNegativity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_dataSegnalazione2"
            android:layout_width="284dp"
            android:layout_height="41dp"
            android:layout_marginTop="84dp"
            android:background="@drawable/background_field"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:text="@string/date_alert"
            android:textColor="#455A64"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_statoSegnalazione" />

        <TextView
            android:id="@+id/textView_noSignEff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:text="@string/no_sign2"
            android:textSize="18sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_manifestNegativity"
            android:layout_width="208dp"
            android:layout_height="58dp"
            android:backgroundTint="@color/ciuc"
            android:text="@string/manifestNegButton"
            android:theme="@style/Button.ciuc"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/view_manifestNegativity"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="@+id/view_manifestNegativity"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.821" />

        <TextView
            android:id="@+id/textView_statoSegnalazione"
            android:layout_width="284dp"
            android:layout_height="41dp"
            android:layout_marginTop="156dp"
            android:background="@drawable/background_field"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:text="@string/state_alert"
            android:textColor="#455A64"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_UltimaSegnalazione" />

        <TextView
            android:id="@+id/textView_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nulls"
            android:textColor="#455A64"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/textView_statoSegnalazione"
            app:layout_constraintEnd_toEndOf="@+id/textView_statoSegnalazione"
            app:layout_constraintHorizontal_bias="0.626"
            app:layout_constraintStart_toStartOf="@+id/textView_statoSegnalazione"
            app:layout_constraintTop_toTopOf="@+id/textView_statoSegnalazione"
            app:layout_constraintVertical_bias="0.454" />

        <TextView
            android:id="@+id/textView_stato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nulls"
            android:textColor="#455A64"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/textView_dataSegnalazione2"
            app:layout_constraintEnd_toEndOf="@+id/textView_dataSegnalazione2"
            app:layout_constraintHorizontal_bias="0.641"
            app:layout_constraintStart_toStartOf="@+id/textView_dataSegnalazione2"
            app:layout_constraintTop_toTopOf="@+id/textView_dataSegnalazione2"
            app:layout_constraintVertical_bias="0.454" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>